--- a/.env
+++ b/.env
@@ -37,5 +37,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://jeankelouaouamouno71@gmail.com:mejwhxuzkrbyrajw@smtp.gmail.com:587?encryption=tls
+#MAILER_DSN=smtp://jeankelouaouamouno71@gmail.com:mejwhxuzkrbyrajw@smtp.gmail.com:587?encryption=tls
+MAILER_DSN="smtp://38e8c03b38a98c:522303bf4e3142@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
