--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,6 +40,7 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/exchange/\d+/review, roles: ROLE_USER }
 
 when@test:
     security:
