--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+app_exchange_show:
+    path: /exchange/{id}
+    controller: App\Controller\ExchangeController::show
+    requirements:
+        id: \d+
